tests/failing/func-call-bad-arg-type-2.c

int func1(char a, char b) {
    return 3;
}

int main() {
    func1('a', 123); // 2nd arg is wrong type
}
